Removed icons from navbar and fixed collapsed behavior

--- a/front_end/static/base.scss
+++ b/front_end/static/base.scss
@@ -52,11 +52,15 @@ body {
     left: 1px;
   }
 
-    ul > li > a:hover,
-    li.open a {
-      // Text colour when hovered on
-      color: black;
-    }
+  ul > li > a:hover,
+  li.open a {
+    // Text colour when hovered on
+    color: black;
+  }
+
+  .dropdown-menu {
+    position: absolute;
+  }
 }
 
 .dropdown {
